opam-version: "2.0"
version: "0.2.2"
maintainer: "smimram@gmail.com"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet"
build: [
  ["./bootstrap"] {pinned}
  ["./configure" "--prefix" prefix]
  [make "clean"] {pinned}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
  "conf-pkg-config" {build}
]
depexts: [
  ["libao-devel"] {os-distribution = "centos"}
  ["libao-devel"] {os-distribution = "fedora"}
  ["libao-devel"] {os-family = "suse"}
  ["libao"] {os = "macos" & os-distribution = "homebrew"}
  ["libao-dev"] {os-distribution = "debian"}
  ["libao-dev"] {os-distribution = "ubuntu"}
  ["libao"] {os = "freebsd"}
  ["libao-dev"] {os-distribution = "alpine"}
]
synopsis:
  "Bindings for the AO library which provides high-level functions for using soundcards"
